--- a/login.html
+++ b/login.html
@@ -66,7 +66,7 @@
 
     <script>
         // URL to the raw JSON file in your GitHub repository
-        const usersJsonUrl = "https://raw.githubusercontent.com/GalacticSymphony/Apple/main/user.json; // Replace with your GitHub raw URL
+        const usersJsonUrl = "https://raw.githubusercontent.com/GalacticSymphony/Apple/main/user.json"; // Replace with your GitHub raw URL
 
         // Function to fetch users from the JSON file
         async function fetchUsers() {
